# gamma-protocol

./: .gitignore  .sandbox_test  .tmp_generate.py  GEMINI.md  GLOBAL_GAMMA.md  README.md  gamma.gamma  gamma_protocol.md  package.json  pyproject.toml  readme.md  story.md  template.gamma.json
.github/: CODEOWNERS
agents/: README.md  agent_model.md  identity.md  inventory.md  join_act_leave.md  judge_roles.md  model_profiles.md  permissions.md
analysis/: README.md  evaluation.md  gamma_analysis_boundary.md  methods.md  metrics.md  statistical_reasoning.md
audits/: README.md  gamma_burst_commit_prompt.md  theta_validation_prompt.md
chains/: README.md  unified_prompt_standardization.md
code/: gamma_forge.c  gamma_forge.cpp  gamma_forge.js  gamma_forge.py
collaboration/: README.md  agent_handoff.md  communication.md  contribution.md  github_app.md  github_project.md  versioning.md
context/: README.md  environment.md
contracts/: agent_contract.md  harness_contract.md  judge_contract.md  observation_contract.md  patch_contract.md  quest_contract.md  receipt_contract.md
core/: glossary.md  planes.md  principles.md  repo_boundaries.md  system_overview.md
data/: README.md
docs/: citation_and_evidence_policy.md  forge_utility_spec.md  glossary.md  migration_report.md  repository_file_policy.md  story.md  validation_playbook.md
doctrine/: agent_header_footer_protocol.md  four_plane_architecture.md  game_theory_doctrine.md  gamma_arena_doctrine.md  hellenic_stack.md  neuroscience_claim_discipline.md  player_harness_contract.md  repo_boundaries.md
(+80 files in other folders)
